--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,9 +47,9 @@
 }
 
 .sidebar-gradient {
-  background: linear-gradient(220deg, #f5f5ef, #f4ebe3, #f7dcc2);
+  background: linear-gradient(220deg, #f5f5ef, #f7eade, #fadcc0);
   background-size: 240% 240%;
-  animation: gradient-animation 10s ease infinite;
+  animation: gradient-animation 7s ease infinite;
 }
 
 .sidebar-transition {
@@ -59,17 +59,29 @@
 .underline-animation {
   position: relative;
   display: inline-block;
+  color: #145943;
+  text-decoration: none;
+}
+
+.underline-animation::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 2px;
+  left: 0;
+  background-color: rgba(20, 89, 67, 0.4);
 }
 
 .underline-animation::after {
   content: '';
   position: absolute;
   width: 100%;
-  transform: scaleX(0);
   height: 1px;
-  bottom: 1px;
+  bottom: 2px;
   left: 0;
-  background-color: currentColor;
+  background-color: #145943;
+  transform: scaleX(0);
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
