--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 html.light {
-  --background: #ffffff;
+  --background: #f2f2f2;
   --primary: #000000;
-  --secondary: #909bad;
+  --secondary: #9c9c9c;
 }
 
 html.dark {
