--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,6 +37,8 @@ html.dark {
   --text-fill-colour: var(--primary);
   --dot-colour: var(--background2);
   --stroke-width: 3px;
+  --glow-transparency: 0.2;
+  --ellipse-glow:rgb(230,220,224);
 }
 
 body {
@@ -90,5 +92,14 @@ body {
   
   body {
     -webkit-overflow-scrolling: touch;
+  }
+}
+
+@layer utilities {
+  .dark .neon-glow {
+    text-shadow: 
+      0 0 4px rgba(175, 139, 108, 0.3),
+      0 0 6px rgba(175, 139, 108, 0.2),
+      0 0 8px rgba(175, 139, 108, 0.1);
   }
 }
