--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,7 +39,7 @@ html.dark {
   --stroke-width: 3px;
   --glow-transparency: 0.2;
   --ellipse-glow:rgb(230,220,224);
-  --sparkle-glow:rgb(175, 139, 108);
+  --sparkle-glow:rgba(175, 139, 108, 0.7);
 }
 
 body {
